fixed scrollbar on messsagebar

--- a/react-app/src/MessageBar/messagebar.css
+++ b/react-app/src/MessageBar/messagebar.css
@@ -91,7 +91,6 @@
 .channelContent {
   height: 100%;
   width: 250px;
-  overflow: scroll;
   scrollbar-color: white;
   background-color:#24252c;
   z-index:1;
@@ -136,6 +135,8 @@ fa-ellipsis-v{
 }
 .od{
   position: relative;
+  height: 100%;
+  overflow: scroll;
 }
 .hide{
   animation: run 0.20s;
